--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -6,3 +6,8 @@ RUN apt-get update -qq \
   && rm -rf /var/lib/apt/lists/*
 
 COPY imagemagick-policy.xml /etc/ImageMagick-6/policy.xml
+
+ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
+RUN bash /tmp/consul_template_install.sh && rm /tmp/consul_template_install.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
