--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -2,7 +2,7 @@ FROM ruby:2.2
 
 RUN apt-get update -qq \
   && apt-get -y install build-essential libpq-dev libqt4-dev git wget \
-  libyaml-dev postgresql-client-9.4 xvfb nodejs \
+  libyaml-dev postgresql-client-9.4 xvfb nodejs npm \
   && rm -rf /var/lib/apt/lists/*
 
 COPY imagemagick-policy.xml /etc/ImageMagick-6/policy.xml
