--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -1,8 +1,8 @@
 FROM ruby:2.3
 
 RUN apt-get update -qq \
-  && apt-get -y install build-essential libpq-dev libqt4-dev git wget \
-  libyaml-dev postgresql-client-9.4 xvfb nodejs npm \
+  && apt-get -y install build-essential libpq-dev git wget \
+  libyaml-dev postgresql-client-9.4 nodejs npm \
   && rm -rf /var/lib/apt/lists/*
 
 COPY imagemagick-policy.xml /etc/ImageMagick-6/policy.xml
