--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -1,5 +1,8 @@
 FROM ruby:2.2
 
+ENV SERVICE_ROOT /service
+ENV SERVICE_USER service
+
 RUN apt-get update -qq \
   && apt-get -y install build-essential libpq-dev libqt4-dev git wget \
   libyaml-dev postgresql-client-9.4 xvfb nodejs npm \
@@ -7,5 +10,8 @@ RUN apt-get update -qq \
 
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
 RUN bash /tmp/consul_template_install.sh && rm /tmp/consul_template_install.sh
+
+RUN useradd --home $SERVICE_ROOT -ms /bin/bash $SERVICE_USER
+WORKDIR $SERVICE_ROOT
 
 ENTRYPOINT ["/entrypoint.sh"]
