--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -1,5 +1,8 @@
 FROM ruby:2.3
 
+ENV SERVICE_ROOT /service
+ENV SERVICE_USER service
+
 RUN curl -sL https://deb.nodesource.com/setup_0.12 | bash -
 
 RUN apt-get update -qq \
@@ -9,5 +12,8 @@ RUN apt-get update -qq \
 
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
 RUN bash /tmp/consul_template_install.sh && rm /tmp/consul_template_install.sh
+
+RUN useradd --home $SERVICE_ROOT -ms /bin/bash $SERVICE_USER
+WORKDIR $SERVICE_ROOT
 
 ENTRYPOINT ["/entrypoint.sh"]
