--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update -qq \
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
 RUN bash /tmp/consul_template_install.sh && rm /tmp/consul_template_install.sh
 
-RUN useradd --home $SERVICE_ROOT -ms /bin/bash $SERVICE_USER
+RUN groupadd $SERVICE_USER && useradd --create-home --home $SERVICE_ROOT --gid $SERVICE_USER --shell /bin/bash $SERVICE_USER
 WORKDIR $SERVICE_ROOT
 
 ENTRYPOINT ["/entrypoint.sh"]
