--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.2
+FROM ruby:2.2-stretch
 
 ENV SERVICE_ROOT /service
 ENV SERVICE_USER service
@@ -6,6 +6,7 @@ ENV SERVICE_USER service
 RUN apt-get update -qq \
   && apt-get -y install build-essential libpq-dev libqt4-dev git wget \
   libyaml-dev postgresql-client-9.4 xvfb nodejs npm \
+  && apt-get upgrade -y \
   && rm -rf /var/lib/apt/lists/*
 
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
