--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.3
+FROM ruby:2.3-stretch
 
 ENV SERVICE_ROOT /service
 ENV SERVICE_USER service
@@ -8,6 +8,7 @@ RUN curl -sL https://deb.nodesource.com/setup_0.12 | bash -
 RUN apt-get update -qq \
   && apt-get -y install build-essential libpq-dev libqt4-dev git wget \
   libyaml-dev postgresql-client-9.4 xvfb nodejs \
+  && apt-get upgrade -y \
   && rm -rf /var/lib/apt/lists/*
 
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
