--- a/2.4-alpine/Dockerfile
+++ b/2.4-alpine/Dockerfile
@@ -3,7 +3,7 @@ FROM ruby:2.4-alpine3.7
 ENV SERVICE_ROOT /service
 ENV SERVICE_USER service
 
-RUN apk update && apk add libpq qt git wget yaml postgresql-client xvfb bash nodejs
+RUN apk update && apk add libpq qt git wget yaml postgresql-client xvfb bash nodejs make gcc libc-dev
 
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
 RUN bash /tmp/consul_template_install.sh && rm /tmp/consul_template_install.sh
