--- a/2.4-stretch-slim/Dockerfile
+++ b/2.4-stretch-slim/Dockerfile
@@ -9,10 +9,16 @@ FROM ruby:2.4-slim-stretch
 #   - postgresql-client requires the presence of man pages for some reason. Debian-slim doesn't have those by default, so we have to add those as a stub (source: https://github.com/dalibo/temboard/issues/211)
 #   - we install Imagemagick in our base image so we can keep it updated in one place, and so we can add a strict security policy by default (see further down)
 RUN apt-get update -qq \
-    && apt-get upgrade -y \
-    && mkdir -p /usr/share/man/man1 \
-    && mkdir -p /usr/share/man/man7 \
-    && apt-get install -y build-essential imagemagick git wget curl xvfb binutils jq sudo unzip qt5-default libpq-dev postgresql-client-9.6
+    && mkdir -p /usr/share/man/man1 && mkdir -p /usr/share/man/man7 \
+    && apt-get install -y build-essential imagemagick git wget curl xvfb \
+    binutils jq sudo unzip qt5-default libyaml-dev libpq-dev \
+    postgresql-client-9.6 && apt-get upgrade -y && rm -rf /var/lib/apt/lists/*
+
+# We want npm in our base image. To get it, we must install nodejs. There is one in apt-get, but it's super old (version ~4). To get a newer node we must first add the nodesource PPA.
+# Source: https://github.com/nodesource/distributions/blob/master/README.md#deb
+# At the time of writing the installation of Node 8 (LTS) gives us npm 6.4.1. Node 8 will be EOL in December 2019.
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN apt-get update -qq && apt-get install -y nodejs
 
 # Add a strict security policy for Imagemagick (note: Imagemagick 7 is currently not available in Debian)
 COPY imagemagick-policy.xml /etc/ImageMagick-6/policy.xml
@@ -35,12 +41,6 @@ WORKDIR $SERVICE_ROOT
 # As an example, see the Makefile in the Heroes project.
 ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/wait-for-it.sh /wait-for-it.sh
 RUN chmod a+rx /wait-for-it.sh
-
-# We want npm in our base image. To get it, we must install nodejs. There is one in apt-get, but it's super old (version ~4). To get a newer node we must first add the nodesource PPA.
-# Source: https://github.com/nodesource/distributions/blob/master/README.md#deb
-# At the time of writing the installation of Node 8 (LTS) gives us npm 6.4.1. Node 8 will be EOL in December 2019.
-RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
-RUN apt-get update -qq && apt-get install -y nodejs
 
 # Our entrypoint will pull in our environment variables from Consul and Vault, and execute whatever command we provided the container.
 # See https://github.com/articulate/docker-consul-template-bootstrap/blob/master/entrypoint.sh
