--- a/2.7-buster-slim/Dockerfile
+++ b/2.7-buster-slim/Dockerfile
@@ -11,8 +11,8 @@ FROM ruby:2.7-slim-buster
 RUN apt-get update -qq \
     && mkdir -p /usr/share/man/man1 \
     && mkdir -p /usr/share/man/man7 \
-    && apt-get install -y build-essential imagemagick git wget curl xvfb \
-    binutils jq sudo unzip qt5-default libyaml-dev libpq-dev \
+    && apt-get install -y build-essential imagemagick git wget curl \
+    binutils jq sudo unzip libyaml-dev libpq-dev \
     postgresql-client \
     && apt-get upgrade -y \
     && apt-get clean \
