ci(build): pull the image before building it
We're seeing some weird caching issues. Try setting it to pull before building

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           context: ${{ matrix.tag }}
+          pull: true
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64/v8
