--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
           - 2.7-buster-slim
           - 2.7-buster-slim-minimal
           - 2.7-buster-slim-qt
+          - 2.7-bullseye-slim
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
