Add Ruby 3.1 Bullseye image
This adds a Ruby 3.1 docker image running on Debian Bullseye and it also
upgrades ImageMagick to version 8

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,9 @@ jobs:
           - 2.7-buster-slim-minimal
           - 2.7-buster-slim-qt
           - 2.7-bullseye-slim
+          - 3.1-bullseye-slim
+          - 3.1-bullseye-slim-minimal
+          - 3.1-bullseye-slim-qt
     steps:
       - uses: actions/checkout@v2
       - uses: hadolint/hadolint-action@v1.6.0
