--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
           - 2.7-buster-slim-minimal
           - 2.7-buster-slim-qt
           - 2.7-bullseye-slim
+          - 3.1-bullseye-slim
+          - 3.1-bullseye-slim-minimal
+          - 3.1-bullseye-slim-qt
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
