ci: update actions
Update actions to latest and pin "untrusted" actions to a sha

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,8 +27,8 @@ jobs:
           - 3.1-bullseye-slim-minimal
           - 3.1-bullseye-slim-qt
     steps:
-      - uses: actions/checkout@v2
-      - uses: hadolint/hadolint-action@v1.6.0
+      - uses: actions/checkout@v3
+      - uses: hadolint/hadolint-action@0a6d062e780d218ea909a18365e0ab2e36d09612 # pin@v2.0.0
         with:
           dockerfile: ${{ matrix.image }}/Dockerfile
           ignore: DL3008
