--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main
-  schedule: # Run everyday
+  schedule:
+    # Run everyday
     - cron: "0 0 * * *"
   workflow_dispatch:
     inputs:
@@ -40,9 +41,9 @@ jobs:
           - 3.1-bullseye-slim-minimal
           - 3.1-bullseye-slim-qt
     steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
+      - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
       - id: meta
         run: |
           TAGS="${{ env.IMAGE }}:${{ matrix.tag }}"
@@ -51,13 +52,13 @@ jobs:
           NO_CACHE="false"
           [ "${{ github.event.inputs.cache }}" == "false" ] && NO_CACHE="true"
 
-          echo "::set-output name=tags::$TAGS"
-          echo "::set-output name=no_cache::$NO_CACHE"
-      - uses: docker/login-action@v1
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
+          echo "no_cache=$NO_CACHE" >> $GITHUB_OUTPUT
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v3
         with:
           context: ${{ matrix.tag }}
           pull: true
