build(docker)!: use newest docker-consul-template-bootstrap
Replace the old shell based entrypoint with the compiled entrypoint.
Install ca-certificates and awscli, which were included in the old
install script

BREAKING CHANGE: removes consul-template and vault executables

--- a/2.7-bullseye-slim-qt/Dockerfile
+++ b/2.7-bullseye-slim-qt/Dockerfile
@@ -1,10 +1,13 @@
+# syntax=docker/dockerfile:1
 FROM ruby:2.7-slim-bullseye
 
 ENV SERVICE_ROOT /service
 ENV SERVICE_USER service
 
-ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/install.sh /tmp/consul_template_install.sh
-ADD https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/master/wait-for-it.sh /wait-for-it.sh
+ARG TARGETARCH
+ARG AWSCLI_VERSION=2.9.15
+ADD --chmod=755 https://github.com/articulate/docker-consul-template-bootstrap/releases/latest/download/docker-consul-template-bootstrap_linux_${TARGETARCH} /entrypoint
+ADD --chmod=755 https://raw.githubusercontent.com/vishnubob/wait-for-it/81b1373f17855a4dc21156cfe1694c31d7d1792e/wait-for-it.sh /wait-for-it.sh
 ADD https://deb.nodesource.com/setup_16.x /tmp/setup-node.sh
 
 # - postgresql-client requires the presence of man pages for some reason. Debian-slim doesn't have those by default, so we have to add those as a stub (source: https://github.com/dalibo/temboard/issues/211)
@@ -17,15 +20,15 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man7 \
   && apt-get install --no-install-recommends -y \
   build-essential imagemagick git wget curl xvfb binutils jq sudo unzip \
   qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5webkit5-dev \
-  libyaml-dev libpq-dev nodejs postgresql-client \
+  ca-certificates libyaml-dev libpq-dev nodejs postgresql-client \
   && apt-get upgrade -y \
   && apt-get clean \
-  # Consul template
-  && bash /tmp/consul_template_install.sh \
+  # AWSCLI (to be removed in a future release)
+    && curl -s "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m)-${AWSCLI_VERSION}.zip" -o /tmp/awscliv2.zip \
+    && unzip -d /tmp /tmp/awscliv2.zip \
+    && /tmp/aws/install \
   # Create our service group and user
   && groupadd $SERVICE_USER && useradd --create-home --home $SERVICE_ROOT --gid $SERVICE_USER --shell /bin/bash $SERVICE_USER \
-  # Make wait-for-it executable
-  && chmod a+rx /wait-for-it.sh \
   # cleanup
   && rm -rf /var/lib/apt/lists/* /usr/share/doc /root/.cache/ /tmp/*
 
@@ -36,5 +39,5 @@ WORKDIR $SERVICE_ROOT
 
 # Our entrypoint will pull in our environment variables from Consul and Vault
 # and execute whatever command we provided the container.
-# See https://github.com/articulate/docker-consul-template-bootstrap/blob/master/entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+# See https://github.com/articulate/docker-consul-template-bootstrap
+ENTRYPOINT [ "/entrypoint" ]
