build(docker): symlink /entrypoint.sh to new /entrypoint
There's a lot of processes that are assuming /entrypoint.sh yet. Synlink
this to the new entrypoint to allow for a migration

--- a/2.6-bullseye-slim/Dockerfile
+++ b/2.6-bullseye-slim/Dockerfile
@@ -22,6 +22,7 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man7 \
         ca-certificates libyaml-dev libpq-dev nodejs postgresql-client \
     && apt-get upgrade -y \
     && apt-get clean \
+    && ln -s /entrypoint /entrypoint.sh \
     # AWSCLI (to be removed in a future release)
     && curl -s "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m)-${AWSCLI_VERSION}.zip" -o /tmp/awscliv2.zip \
     && unzip -d /tmp /tmp/awscliv2.zip \
