--- a/3.1-bullseye-slim/Dockerfile
+++ b/3.1-bullseye-slim/Dockerfile
@@ -22,6 +22,7 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man7 \
         ca-certificates libyaml-dev libpq-dev nodejs postgresql-client \
     && apt-get upgrade -y \
     && apt-get clean \
+    && ln -s /entrypoint /entrypoint.sh \
     # AWSCLI (to be removed in a future release)
     && curl -s "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m)-${AWSCLI_VERSION}.zip" -o /tmp/awscliv2.zip \
     && unzip -d /tmp /tmp/awscliv2.zip \
