--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 5
       matrix:
         tag:
           - 2.5-stretch-slim
@@ -44,6 +45,9 @@ jobs:
           - 3.1-bullseye-slim
           - 3.1-bullseye-slim-minimal
           - 3.1-bullseye-slim-qt
+          - 3.2-bullseye-slim
+          - 3.2-bullseye-slim-minimal
+          - 3.2-bullseye-slim-qt
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-qemu-action@v2
