--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,6 +27,9 @@ jobs:
           - 3.1-bullseye-slim
           - 3.1-bullseye-slim-minimal
           - 3.1-bullseye-slim-qt
+          - 3.2-bullseye-slim
+          - 3.2-bullseye-slim-minimal
+          - 3.2-bullseye-slim-qt
     steps:
       - uses: actions/checkout@v3
       - uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf # pin@v3.1.0
