feat: add secrets command
Make Docker secrets easier to work with

--- a/3.2-bullseye-slim/Dockerfile
+++ b/3.2-bullseye-slim/Dockerfile
@@ -7,6 +7,7 @@ ENV SERVICE_USER service
 ARG TARGETARCH
 ARG AWSCLI_VERSION=2.9.15
 ADD --chmod=755 https://github.com/articulate/docker-consul-template-bootstrap/releases/latest/download/docker-consul-template-bootstrap_linux_${TARGETARCH} /entrypoint
+ADD --chmod=755 https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/main/scripts/docker-secrets /usr/local/bin/secrets
 ADD --chmod=755 https://raw.githubusercontent.com/vishnubob/wait-for-it/81b1373f17855a4dc21156cfe1694c31d7d1792e/wait-for-it.sh /wait-for-it.sh
 ADD https://deb.nodesource.com/setup_18.x /tmp/setup-node.sh
 
@@ -28,7 +29,8 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man7 \
     && unzip -d /tmp /tmp/awscliv2.zip \
     && /tmp/aws/install \
     # Create our service group and user
-    && groupadd $SERVICE_USER && useradd --create-home --home $SERVICE_ROOT --gid $SERVICE_USER --shell /bin/bash $SERVICE_USER \
+    && groupadd --gid 1001 $SERVICE_USER \
+    && useradd --create-home --home $SERVICE_ROOT --shell /bin/bash --gid 1001 --uid 1001 $SERVICE_USER \
     # cleanup
     && rm -rf /var/lib/apt/lists/* /usr/share/doc /root/.cache/ /tmp/*
 
