feat: add new 3.2 base images

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,29 +1,27 @@
 name: Lint
 
-on:
-  pull_request:
+on: pull_request
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Find Dockerfiles
+        id: scan
+        run: echo "dockerfiles=$(find . -name Dockerfile | cut -c3- | jq -R -s -c 'split("\n")[:-1]')" >> "$GITHUB_OUTPUT"
+    outputs:
+      dockerfiles: ${{ steps.scan.outputs.dockerfiles }}
   lint:
     runs-on: ubuntu-latest
+    needs: [setup]
     strategy:
       fail-fast: false
       matrix:
-        image:
-          - 2.7-buster-slim
-          - 2.7-buster-slim-minimal
-          - 2.7-buster-slim-qt
-          - 2.7-bullseye-slim
-          - 2.7-bullseye-slim-qt
-          - 3.1-bullseye-slim
-          - 3.1-bullseye-slim-minimal
-          - 3.1-bullseye-slim-qt
-          - 3.2-bullseye-slim
-          - 3.2-bullseye-slim-minimal
-          - 3.2-bullseye-slim-qt
+        dockerfile: ${{ fromJSON(needs.setup.outputs.dockerfiles) }}
     steps:
       - uses: actions/checkout@v3
       - uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf # pin@v3.1.0
         with:
-          dockerfile: ${{ matrix.image }}/Dockerfile
+          dockerfile: ${{ matrix.dockerfile }}
           ignore: DL3008
