--- a/3.2-bullseye-slim/Dockerfile
+++ b/3.2-bullseye-slim/Dockerfile
@@ -1,3 +1,4 @@
+# tags=articulate/articulate-ruby:3.2-bullseye-slim
 # syntax=docker/dockerfile:1
 FROM ruby:3.2-slim-bullseye
 
@@ -6,8 +7,8 @@ ENV SERVICE_USER service
 
 ARG TARGETARCH
 ARG AWSCLI_VERSION=2.11.15
-ADD --chmod=755 https://github.com/articulate/docker-consul-template-bootstrap/releases/latest/download/docker-consul-template-bootstrap_linux_${TARGETARCH} /entrypoint
-ADD --chmod=755 https://raw.githubusercontent.com/articulate/docker-consul-template-bootstrap/main/scripts/docker-secrets /usr/local/bin/secrets
+ADD --chmod=755 https://github.com/articulate/docker-bootstrap/releases/latest/download/docker-bootstrap_linux_${TARGETARCH} /entrypoint
+ADD --chmod=755 https://raw.githubusercontent.com/articulate/docker-bootstrap/main/scripts/docker-secrets /usr/local/bin/secrets
 ADD --chmod=755 https://raw.githubusercontent.com/vishnubob/wait-for-it/81b1373f17855a4dc21156cfe1694c31d7d1792e/wait-for-it.sh /wait-for-it.sh
 ADD https://deb.nodesource.com/setup_18.x /tmp/setup-node.sh
 
@@ -41,5 +42,5 @@ WORKDIR $SERVICE_ROOT
 
 # Our entrypoint will pull in our environment variables from Consul and Vault
 # and execute whatever command we provided the container.
-# See https://github.com/articulate/docker-consul-template-bootstrap
+# See https://github.com/articulate/docker-bootstrap
 ENTRYPOINT [ "/entrypoint" ]
