--- a/3.1-bullseye-slim/Dockerfile
+++ b/3.1-bullseye-slim/Dockerfile
@@ -21,7 +21,7 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man7 \
     && apt-get update -qq \
     && apt-get install --no-install-recommends -y \
         build-essential imagemagick git wget curl binutils jq sudo unzip \
-        ca-certificates libyaml-dev libpq-dev nodejs postgresql-client \
+        ca-certificates libyaml-dev libpq-dev nodejs postgresql-client dumb-init \
     && apt-get upgrade -y \
     && apt-get clean \
     && ln -s /entrypoint /entrypoint.sh \
@@ -43,4 +43,4 @@ WORKDIR $SERVICE_ROOT
 # Our entrypoint will pull in our environment variables from Consul and Vault
 # and execute whatever command we provided the container.
 # See https://github.com/articulate/docker-bootstrap
-ENTRYPOINT [ "/entrypoint" ]
+ENTRYPOINT [ "dumb-init", "--", "/entrypoint" ]
